User management API - create new user
